[package]
name = "iced_winit"
description = "A runtime for iced on top of winit"
edition = "2024"

[features]
default = ["x11", "wayland"]
debug = ["iced_debug/enable"]
sysinfo = ["dep:sysinfo"]
unconditional-rendering = []
linux-theme-detection = ["dep:mundy", "mundy/async-io", "mundy/color-scheme"]
x11 = ["winit/x11", "window_clipboard/x11"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita", "window_clipboard/wayland"]

[dependencies]
iced_debug = "0.14"
iced_program = "0.14"

log = "0.4"
rustc-hash = "2.0"
thiserror = "2"
tracing = "0.1"
window_clipboard = { version = "0.5", default-features = false }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

sysinfo = { version = "0.33", default-features = false, optional = true}


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version =  "0.3.69", features = ["Document", "Window", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
mundy = { version = "0.2", default-features = false, optional = true}
